--- a/Test Task/Quiz/style.css
+++ b/Test Task/Quiz/style.css
@@ -64,7 +64,7 @@ body {
     transition: all 0.3s;
 }
 
-.btn:hover {
+.btn:hover:not([disabled]) {
     background: #6d4b82;
     color: #ffffff;
 }
@@ -76,6 +76,7 @@ body {
     width: 150px;
     border: 0;
     padding: 10px;
+    margin: 0 auto;
     margin-top: 40px;
     border-radius: 6px;
     cursor: pointer;
@@ -83,7 +84,11 @@ body {
     display: none;
 }
 
-#next-button:disabled {
-    background: #bdc3c7;
-    cursor: not-allowed;
+
+.correct{
+    background: #9aeabc;
+}
+
+.incorrect{
+    background: #ff9393;
 }
