--- a/Test Task/Quiz/style.css
+++ b/Test Task/Quiz/style.css
@@ -13,7 +13,7 @@ body {
     background: #ffffff;
     width: 90%;
     max-width: 600px;
-    margin: 100px auto 0;
+    margin: 100px auto;
     border-radius: 30px;
     padding: 30px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -37,8 +37,13 @@ body {
     color: #333333;
     text-align: center;
     font-weight: 600;
-    padding-bottom: 20px;
-    margin-bottom: 20px;
+    padding-bottom: 7px;
+    /*margin-bottom: 20px;*/
+}
+
+#answer-info {
+    color: #9f5ff4;
+    
 }
 
 #answer-buttons{
@@ -46,7 +51,10 @@ body {
     flex-wrap: wrap;
     justify-content: center;
     gap: 30px;
+    margin-top: 40px;
 }
+
+
 
 .btn {
     background: #7f8c8d;
@@ -69,7 +77,12 @@ body {
     color: #ffffff;
 }
 
-#next-button {
+.btn.selected {
+    background: #9f5ff4; 
+    color: #ffffff; 
+}
+
+#next-button, #check-button {
     background: #95a5a6;
     color: #ffffff;
     font-weight: 500;
@@ -91,4 +104,10 @@ body {
 
 .incorrect{
     background: #ff9393;
+}
+
+.score {
+    font-size: 24px;
+    font-weight: bold;
+    color: #ce0404;
 }
